<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.joaosilva22.rocketlaunchtracker.fragments.LaunchDetailsFragment"
    >

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/launch_details_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:text="@string/primary_mission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/HeadingText"
                    />

                <TextView
                    android:id="@+id/launch_details_mission_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ContentText"
                    />

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:text="@string/launch_vehicle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        style="@style/HeadingText"
                        />

                    <TextView
                        android:id="@+id/launch_details_launch_vehicle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        style="@style/ContentText"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:text="@string/launch_pad"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        style="@style/HeadingText"
                        />

                    <TextView
                        android:id="@+id/launch_details_launch_pad"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        style="@style/ContentText"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:text="@string/window_start"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        style="@style/HeadingText"
                        />

                    <TextView
                        android:id="@+id/launch_details_window_start"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        style="@style/ContentText"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:text="@string/window_end"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        style="@style/HeadingText"
                        />

                    <TextView
                        android:id="@+id/launch_details_window_end"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        style="@style/ContentText"
                        />

                </LinearLayout>

                <View style="@style/Divider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/spacing_small"
                    >

                    <TextView
                        android:text="@string/notification"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        style="@style/HeadingText"
                        />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >

                        <Switch
                            android:id="@+id/launch_details_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/launch_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        />

</RelativeLayout>




